--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "peerDependencies": {
     "bootstrap": "^4.6.0 || ^5.1.3",
-    "react": "^16.x || ^17.x"
+    "react": "^16.x || ^17.x || ^18.x"
   },
   "files": [
     "/dist",
